Added hot-loading, fixed server reload and now passing dynamic bundle path to jade

--- a/spec/support/fixtures/default-reference.html
+++ b/spec/support/fixtures/default-reference.html
@@ -1,3 +1,2 @@
 REFLEX-TEMPLATE-CONTENT
-<div id="application" data-reflex-app-state="&quot;app-state&quot;">body<script type="text/javascript" src="/dist/app.js"></script><script>var Application = require("app");
-Application.start();</script></div>
+<div id="application" data-reflex-app-state="&quot;app-state&quot;">body<script type="text/javascript" src="/dist/app.js"></script><script>Application.start();</script></div>
