Moved reflex application node outside of its script container.

--- a/spec/support/fixtures/default-reference.html
+++ b/spec/support/fixtures/default-reference.html
@@ -1,2 +1,2 @@
 REFLEX-TEMPLATE-CONTENT
-<div id="application" data-reflex-app-state="&quot;app-state&quot;">body<script type="text/javascript" src="/dist/app.js"></script><script>Application.start();</script></div>
+<div id="application" data-reflex-app-state="&quot;app-state&quot;">body</div><script type="text/javascript" src="/dist/app.js"></script><script>Application.start();</script>
